[gd_scene load_steps=9 format=3 uid="uid://bxm0mxjy5loec"]

[ext_resource type="Script" path="res://entities/floor_button/floor_button.gd" id="1_frgqp"]
[ext_resource type="PackedScene" uid="uid://dqy8kjhxdjicd" path="res://assets/models/floor_button.blend" id="2_ydb4k"]
[ext_resource type="Material" uid="uid://rfidhutxy634" path="res://resources/dark_tile.tres" id="3_ls1b4"]
[ext_resource type="Material" uid="uid://bxwt35qn5i6ol" path="res://resources/button.tres" id="4_rocpu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qmacg"]
size = Vector3(2, 1, 2)

[sub_resource type="Animation" id="Animation_qjmps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("floor_button/Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.225, 0)]
}

[sub_resource type="Animation" id="Animation_fr8xm"]
resource_name = "press"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("floor_button/Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.225, 0), Vector3(0, 0.0986899, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g78gu"]
_data = {
"RESET": SubResource("Animation_qjmps"),
"press": SubResource("Animation_fr8xm")
}

[node name="FloorButton" type="Node3D"]
script = ExtResource("1_frgqp")

[node name="floor_button" parent="." instance=ExtResource("2_ydb4k")]

[node name="Platform" parent="floor_button" index="0"]
material_override = ExtResource("3_ls1b4")

[node name="Button" parent="floor_button" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.225, 0)
material_override = ExtResource("4_rocpu")

[node name="ButtonArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 27

[node name="CollisionShape3D" type="CollisionShape3D" parent="ButtonArea"]
shape = SubResource("BoxShape3D_qmacg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g78gu")
}

[connection signal="area_entered" from="ButtonArea" to="." method="_on_button_area_area_entered"]
[connection signal="area_exited" from="ButtonArea" to="." method="_on_button_area_area_exited"]
[connection signal="body_entered" from="ButtonArea" to="." method="_on_button_area_body_entered"]
[connection signal="body_exited" from="ButtonArea" to="." method="_on_button_area_body_exited"]

[editable path="floor_button"]
